# InnovationHubRobot2022

./: .gitignore  main.py
CppGUI/: Makefile  README.md  UI-layout
CppGUI/include/: TourGuideUI.h
CppGUI/media/: intro-short.mkv
CppGUI/src/: TourGuideUI.cpp  main.cpp
GUI/: CMakeLists.txt  Makefile  README.md  UI-layout  build.sh  main.py
GUI/include/: TourGuideUI.h
GUI/media/: 0001-0003.mkv  intro.mkv  ready_1080p.mkv  ready_4k.mkv
GUI/src/: TourGuideUI.cpp  TourGuideUI.h
arduino/: FuzzyLogicToMotorOutput.ino  Localization.ino  TestArduino.ino  arduino.ino  encoder_rotation_degrees.ino
arduino/Localization/: Localization.ino
arduino/read_beacon_UART/: read_beacon_UART.ino
arduino/read_from_pi/: read_from_pi.ino
compvis/: FuzzyLogic.py  FuzzyLogicSimulation.py  ObjectDetection.py  ObjectDetection_4-5.py  SerialTest.py  camera_feed.py  fuzzy_logic.py  main.py  marvelmind.py  master_control.py  object_detection.py  object_detection_fast.py  object_detection_segments.py
